--- a/front/Pages/ChanaDal.html
+++ b/front/Pages/ChanaDal.html
@@ -26,23 +26,10 @@
                     <img src="../imgs/Designer (1).png" alt="" class="logoImg">
                 </a>
             </div>
-            <ul class="nav-list1">
-                <li class="nav-link1"> <a href="#home">Home</a> </li>
-                <li class="nav-link1"> <a href="#services">Services</a> </li>
-                <li class="nav-link1"> <a href="#about">About</a> </li>
-                <li class="nav-link1"> <a href="#skills">Skills</a> </li>
-                <li class="nav-link1"> <a href="#work">Products</a> </li>
-            </ul>
-            <ul class="social-links1">
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <!-- <li><a href=""><i class="fab fa-github"></i></a></li> -->
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class=" fab fa-linkedin"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-            </ul>
+           
             <!-- <button class="flip">Color<br>flip</button> -->
             <div class="nav-toggle">
-                <i class="fas fa-bars"></i>
+                <a class="home" href="../index.html">Home</a>
             </div>
         </div>
         <!-- <hr> -->
@@ -65,7 +52,7 @@
                 <li><a href=""><i class=" fab fa-linkedin"></i></a></li>
             </ul>
         </ul>
-    <i class="fas fa-infinity flip" ></i>
+    <!-- <i class="fas fa-infinity flip" ></i> -->
 
 
     <div class="ProductContainer">
@@ -73,7 +60,7 @@
             <div class="vertical-menu">
                 <a href="#" class="active">products</a>
                 <a href="./ChanaDal.html" class="active">Chana Dal</a>
-                <a href="./Basmati.html" >Basmati Rice</a>
+                <a href="./Textile.html" >TextTile</a>
                 <a href="./groundNut.html">Ground Nuts</a>
                 <a href="./lentils.html">lentils</a>
                 <a href="./Moong.html">Moong Dal</a>
