--- a/front/Pages/Moong.html
+++ b/front/Pages/Moong.html
@@ -26,23 +26,10 @@
                     <img src="../imgs/Designer (1).png" alt="" class="logoImg">
                 </a>
             </div>
-            <ul class="nav-list1">
-                <li class="nav-link1"> <a href="#home">Home</a> </li>
-                <li class="nav-link1"> <a href="#services">Services</a> </li>
-                <li class="nav-link1"> <a href="#about">About</a> </li>
-                <li class="nav-link1"> <a href="#skills">Skills</a> </li>
-                <li class="nav-link1"> <a href="#work">Products</a> </li>
-            </ul>
-            <ul class="social-links1">
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <!-- <li><a href=""><i class="fab fa-github"></i></a></li> -->
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class=" fab fa-linkedin"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-            </ul>
+           
             <!-- <button class="flip">Color<br>flip</button> -->
             <div class="nav-toggle">
-                <i class="fas fa-bars"></i>
+                <a class="home" href="../index.html">Home</a>
             </div>
         </div>
         <!-- <hr> -->
@@ -65,7 +52,7 @@
                 <li><a href=""><i class=" fab fa-linkedin"></i></a></li>
             </ul>
         </ul>
-    <i class="fas fa-infinity flip" ></i>
+    <!-- <i class="fas fa-infinity flip" ></i> -->
 
 
     <div class="ProductContainer">
@@ -73,7 +60,7 @@
             <div class="vertical-menu">
                 <a href="#" class="active">products</a>
                 <a href="./ChanaDal.html" >Chana Dal</a>
-                <a href="./Basmati.html" >Basmati Rice</a>
+                <a href="./Textile.html" >TextTile</a>
                 <a href="./groundNut.html" >Ground Nuts</a>
                 <a href="./lentils.html" >lentils</a>
                 <a href="./Moong.html" class="active">Moong Dal</a>
@@ -90,13 +77,12 @@
             </h4>
 
             <h4>
-                In terms of taste and texture, Chana Dal offers a nutty flavor and a firm texture when cooked, making it suitable for various dishes. It can be boiled and seasoned as a standalone dish or used as an ingredient in soups, stews, curries, salads, and snacks.
-            </h4>
+                Endless Culinary Inspiration:
+                Our premium lentils cater to the creative visions of chefs, home cooks, and food enthusiasts alike, offering endless culinary inspiration and possibilities. Whether you seek to craft traditional dishes that pay homage to cultural heritage or innovate with modern interpretations, our lentils serve as the perfect canvas for culinary expression.            </h4>
 
             <h4>
-                As a leading exporter of Chana Dal, we take pride in delivering premium quality lentils that meet international standards of hygiene and safety. Our Chana Dal is meticulously processed, sorted, and packed to preserve its freshness, flavor, and nutritional value.
-
-Whether you're a wholesaler, distributor, or retailer, our Chana Dal promises to delight your customers with its superior quality and taste. Contact us today to explore our range of Chana Dal products and start a fruitful partnership in the global market.
+                Inspiration for Culinary Creativity:
+                Our premium moong dal serves as a source of inspiration for chefs, home cooks, and culinary enthusiasts seeking to elevate their gastronomic creations. Whether crafting traditional delicacies that honor cultural heritage or exploring innovative culinary concepts, moong dal offers endless possibilities for culinary experimentation and expression.
             </h4>
         </div>
     </div>
