--- a/front/Pages/groundNut.html
+++ b/front/Pages/groundNut.html
@@ -26,23 +26,10 @@
                     <img src="../imgs/Designer (1).png" alt="" class="logoImg">
                 </a>
             </div>
-            <ul class="nav-list1">
-                <li class="nav-link1"> <a href="#home">Home</a> </li>
-                <li class="nav-link1"> <a href="#services">Services</a> </li>
-                <li class="nav-link1"> <a href="#about">About</a> </li>
-                <li class="nav-link1"> <a href="#skills">Skills</a> </li>
-                <li class="nav-link1"> <a href="#work">Products</a> </li>
-            </ul>
-            <ul class="social-links1">
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <!-- <li><a href=""><i class="fab fa-github"></i></a></li> -->
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class=" fab fa-linkedin"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-            </ul>
+          
             <!-- <button class="flip">Color<br>flip</button> -->
             <div class="nav-toggle">
-                <i class="fas fa-bars"></i>
+                <a class="home" href="../index.html">Home</a>
             </div>
         </div>
         <!-- <hr> -->
@@ -65,7 +52,7 @@
                 <li><a href=""><i class=" fab fa-linkedin"></i></a></li>
             </ul>
         </ul>
-    <i class="fas fa-infinity flip" ></i>
+    <!-- <i class="fas fa-infinity flip" ></i> -->
 
 
     <div class="ProductContainer">
@@ -73,7 +60,7 @@
             <div class="vertical-menu">
                 <a href="#" class="active">products</a>
                 <a href="./ChanaDal.html" >Chana Dal</a>
-                <a href="./Basmati.html" >Basmati Rice</a>
+                <a href="./Textile.html" >TextTile</a>
                 <a href="./groundNut.html" class="active">Ground Nuts</a>
                 <a href="./lentils.html">lentils</a>
                 <a href="./Moong.html">Moong Dal</a>
@@ -94,13 +81,18 @@
             </h4>
 
             <h4>
-                In terms of taste and texture, Chana Dal offers a nutty flavor and a firm texture when cooked, making it suitable for various dishes. It can be boiled and seasoned as a standalone dish or used as an ingredient in soups, stews, curries, salads, and snacks.
+                Exquisite Taste and Texture:
+Groundnuts boast a delightful blend of savory flavor and satisfying crunch, making them a versatile addition to a myriad of dishes. Whether roasted and seasoned as a delectable snack or incorporated into salads, desserts, sauces, or nut butters, groundnuts lend a distinctive taste and texture that elevates every bite.
+
+Uncompromising Quality Standards:
+Our commitment to excellence is reflected in our rigorous quality assurance measures, ensuring that our groundnuts meet the highest international standards of hygiene and safety. From careful sourcing to meticulous processing and packaging, we prioritize freshness, flavor, and nutritional value to deliver premium-grade groundnuts to our discerning customers.
+
+
             </h4>
 
             <h4>
-                As a leading exporter of Chana Dal, we take pride in delivering premium quality lentils that meet international standards of hygiene and safety. Our Chana Dal is meticulously processed, sorted, and packed to preserve its freshness, flavor, and nutritional value.
-
-Whether you're a wholesaler, distributor, or retailer, our Chana Dal promises to delight your customers with its superior quality and taste. Contact us today to explore our range of Chana Dal products and start a fruitful partnership in the global market.
+                Endless Culinary Possibilities:
+From wholesalers and distributors to retailers and food manufacturers, our premium groundnuts cater to a diverse range of culinary needs. Whether you're looking to enhance your product offerings or create gourmet dishes that delight the palate, our groundnuts provide endless opportunities for culinary exploration and innovation.
             </h4>
         </div>
     </div>
