--- a/front/Pages/cheakpeas.html
+++ b/front/Pages/cheakpeas.html
@@ -26,23 +26,10 @@
                     <img src="../imgs/Designer (1).png" alt="" class="logoImg">
                 </a>
             </div>
-            <ul class="nav-list1">
-                <li class="nav-link1"> <a href="#home">Home</a> </li>
-                <li class="nav-link1"> <a href="#services">Services</a> </li>
-                <li class="nav-link1"> <a href="#about">About</a> </li>
-                <li class="nav-link1"> <a href="#skills">Skills</a> </li>
-                <li class="nav-link1"> <a href="#work">Products</a> </li>
-            </ul>
-            <ul class="social-links1">
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <!-- <li><a href=""><i class="fab fa-github"></i></a></li> -->
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class=" fab fa-linkedin"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-            </ul>
+           
             <!-- <button class="flip">Color<br>flip</button> -->
             <div class="nav-toggle">
-                <i class="fas fa-bars"></i>
+                <a class="home" href="../index.html">Home</a>
             </div>
         </div>
         <!-- <hr> -->
@@ -65,7 +52,7 @@
                 <li><a href=""><i class=" fab fa-linkedin"></i></a></li>
             </ul>
         </ul>
-    <i class="fas fa-infinity flip" ></i>
+    <!-- <i class="fas fa-infinity flip" ></i> -->
 
 
     <div class="ProductContainer">
@@ -73,7 +60,7 @@
             <div class="vertical-menu">
                 <a href="#" class="active">products</a>
                 <a href="./ChanaDal.html" >Chana Dal</a>
-                <a href="./Basmati.html" >Basmati Rice</a>
+                <a href="./Textile.html" >TextTile</a>
                 <a href="./groundNut.html">Ground Nuts</a>
                 <a href="./lentils.html">lentils</a>
                 <a href="./Moong.html">Moong Dal</a>
@@ -90,13 +77,25 @@
             </h4>
 
             <h4>
-                In terms of taste and texture, Chana Dal offers a nutty flavor and a firm texture when cooked, making it suitable for various dishes. It can be boiled and seasoned as a standalone dish or used as an ingredient in soups, stews, curries, salads, and snacks.
+                Chickpeas, renowned for their rich taste and versatile texture, are a culinary staple enjoyed worldwide. As a leading exporter of chickpeas, we are committed to delivering exceptional quality legumes that elevate your dishes to new heights.
+
+               
             </h4>
 
             <h4>
-                As a leading exporter of Chana Dal, we take pride in delivering premium quality lentils that meet international standards of hygiene and safety. Our Chana Dal is meticulously processed, sorted, and packed to preserve its freshness, flavor, and nutritional value.
+                Unmatched Taste and Texture:
+                Chickpeas offer a delightful combination of nutty flavor and firm texture when cooked, making them a favorite ingredient in a wide range of cuisines. Whether boiled and seasoned as a standalone dish or incorporated into soups, stews, curries, salads, or snacks, chickpeas add depth and richness to any recipe.
+            </h4>
 
-Whether you're a wholesaler, distributor, or retailer, our Chana Dal promises to delight your customers with its superior quality and taste. Contact us today to explore our range of Chana Dal products and start a fruitful partnership in the global market.
+            <h4>
+                Exceptional Quality Assurance:
+At our facility, we adhere to stringent quality standards to ensure that our chickpeas meet and exceed international hygiene and safety regulations. From meticulous processing to thorough sorting and packaging, our chickpeas are handled with care to preserve their freshness, flavor, and nutritional integrity.
+
+            </h4>
+
+            <h4>
+                Versatile Applications:
+Our premium chickpeas cater to the diverse needs of wholesalers, distributors, and retailers worldwide. Whether you're looking to stock shelves with bulk quantities or create signature dishes for your customers, our chickpeas offer endless possibilities for culinary creativity and innovation.
             </h4>
         </div>
     </div>
