--- a/front/Pages/Textile.html
+++ b/front/Pages/Textile.html
@@ -129,14 +129,13 @@
                 <div class="rightFoot">
                         <li class="head">Get In Touch</li>
                         <ul>
-                                <li class="li1">Uma Exports Limited
-                                        Suite No.-16
-                                        1st Floor
-                                        Ganga Jamuna Building,
-                                        28/1 Shakespeare Sarani,
-                                        Kolkata - 700 017</li>
-                                <li class="li1">9752727213</li>
-                                <li class="li1">info@umaexports.net.in</li>
+                            <li class="li1">Flat No. 1 Chaitanya
+                                Apartment, Gokul Nagar
+                                Near Shiv Parvati Karyalay
+                                Pune(411041) - India</li>
+                        <li class="li1">9356161918</li>
+                        <li class="li1">ankitasurve948@gmail.com</li>
+                        <li class="li1">Seasharkglobaltrade</li>
                         </ul>
                 </div>
         </div>
