--- a/front/index.html
+++ b/front/index.html
@@ -617,13 +617,13 @@
                 <div class="rightFoot">
                         <li class="head">Get In Touch</li>
                         <ul>
-                                <li class="li1">Siddharth Apartment
-                                        Nanded Phata
-                                        1st Floor
-                                        003
-                                        Pune - India</li>
+                                <li class="li1">Flat No. 1 Chaitanya
+                                        Apartment, Gokul Nagar
+                                        Near Shiv Parvati Karyalay
+                                        Pune(411041) - India</li>
                                 <li class="li1">9356161918</li>
-                                <li class="li1">Seashark</li>
+                                <li class="li1">ankitasurve948@gmail.com</li>
+                                <li class="li1">Seasharkglobaltrade</li>
                         </ul>
                 </div>
         </div>
