--- a/frontend/Pages/Textile.html
+++ b/frontend/Pages/Textile.html
@@ -64,9 +64,9 @@
                 <a href="./groundNut.html" >Ground Nuts</a>
                 <a href="./lentils.html" >lentils</a>
                 <a href="./Moong.html" >Moong Dal</a>
-                <a href="./cheakpeas.html" >Cheakpeas</a>
+                <a href="./cheakpeas.html">Cheakpeas</a>
+                <a href="./Mango.html"> Mangoes</a>
             </div>
-    
                 <img class="prodImage" src="../imgs/textilee.jpeg" alt="Chana Dal">
         </div>
     
