--- a/frontend/Pages/lentils.html
+++ b/frontend/Pages/lentils.html
@@ -65,6 +65,8 @@
                 <a href="./lentils.html" class="active">lentils</a>
                 <a href="./Moong.html">Moong Dal</a>
                 <a href="./cheakpeas.html" >Cheakpeas</a>
+                <a href="./Mango.html">Mangoes</a>
+
             </div>
     
                 <img class="prodImage" src="../imgs/3_types_of_lentil.png" alt="Chana Dal">
