--- a/frontend/index.html
+++ b/frontend/index.html
@@ -236,6 +236,13 @@
                     <h4>Cheakpeas</h4>
                 </div>
 
+                <div class="product">
+                        <a href="./Pages/Mango.html" class="portfolio-item">
+                            <img src="https://jalpurmillersonline.com/cdn/shop/products/kesarmangoes_1024x.jpg?v=1665655474" alt="" class="portfolio-img">
+                        </a>
+                        <h4>Mangoes</h4>
+                    </div>
+
             </div>
     </section>
 
