--- a/frontend/Pages/cheakpeas.html
+++ b/frontend/Pages/cheakpeas.html
@@ -65,6 +65,7 @@
                 <a href="./lentils.html">lentils</a>
                 <a href="./Moong.html">Moong Dal</a>
                 <a href="./cheakpeas.html" class="active">Cheakpeas</a>
+                <a href="./Mango.html">Mangoes</a>
             </div>
     
                 <img class="prodImage" src="../imgs/CHICKPEAS.jpeg" alt="Chana Dal">
